2012-07-28  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_metadata.rb: fix a sequence test failure on Oracle 11gR2.
	    Fix github issue #18 reported by Yasuo Honda.

2012-07-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, test/test_oci8.rb: add OCI8::Cursor#statement.
	   See github issue #12 requested by timon.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_clob.rb: speed up clob tests 29 times.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* test/setup_test_object.sql, test/test_all.rb, test/test_object.rb:
	   Add tests of the previous commit.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Merge pull request #13 from timon/temp_lob at github.
	    If 's' is a temporary lob, use OCILobLocatorAssign instead.

2012-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, test/test_oci8.rb: add OCI8's class variables:
	    @@environment_handle and @@process_handle.

2012-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c, lib/oci8/metadata.rb, test/test_metadata.rb:
	    fix methods of OCI8::Metadata::Sequence and add testcases for them.

2012-05-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: refactor code which generates the
	    C extention name.

2012-05-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/oci8.rb: delete private methods OCI8#server_handle
	    and OCI8#session_handle and use @server_handle and @session_handle instead.

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.2 and 2.1.1
	* VERSION: change the version to 2.1.2.

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb: disable statement caching by default.
	    This is workaround about a SIGSEGV issue.
	    See: https://github.com/rsim/oracle-enhanced/issues/162

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: delete code which overwrites signal handlers