@@ -1,3 +1,8 @@
+2012-07-31  KUBO Takehiro  <kubo@jiubao.org>
+	* test/config.rb, test/test_datetime.rb: refactor test code by adding
+	    global functions convert_to_time() and convert_to_datetime(),
+	    which will be used by test_object.rb later.
+
 2012-07-28  KUBO Takehiro  <kubo@jiubao.org>
 	* test/test_metadata.rb: fix a sequence test failure on Oracle 11gR2.
 	    Fix github issue #18 reported by Yasuo Honda.
